# gwa

./: .gitignore  CHANGELOG.md  COMMANDS.md  LICENSE  README.md  ROADMAP.md  cargo-generate.toml  docker-compose.yml  env.template  flake.nix  justfile  pre-hook.rhai  rename-env.rhai  todo.md  traefik.yml
.github/workflows/: container.yml  simple-test.yml
AGENTS/: README.md
agents/: containers.txt  instructions.md  server-test.md  server.md
client/: .dockerignore  .gitignore  README.md  app.Dockerfile  deno.json
client/src/: app.html
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
client/src/routes/: +layout.svelte  +page.svelte
docs/: gwa.md  just_commands.md  todo.md  unix-setup.md
docs/specs/: derivation-client.md  derivation-server.md  overview.md
docs/specs/old-technical/: RULES.md  sdk-ARCHITECTURE.md  surrealdb-v3.md
docs/static/: attributions.md
generic-app/: .dockerignore  .gitignore  README.md  app.Dockerfile  deno.json  package.json  svelte.config.js  vite.config.ts
generic-app/src/: app.html
generic-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
generic-app/src-tauri/src/: main.rs
generic-app/src/lib/: TauriGreet.svelte
generic-app/src/routes/: +page.svelte
resources/: attributions.md
resources/docs/: local-setup.md  unix-setup.md
scripts/: _shared.just  _shared.nu  check.just  ci.just  deploy.just  dev.just  test.just
server/: README.md
server/api/: api.Dockerfile  pyproject.toml  requirements.txt
server/api/src/: main.py
server/api/test/: main.py  setup.py  test_health.py  test_metadata.py
server/db/: .dockerignore  db.Dockerfile
server/db/init/01-setup/: 01-setup.sql
server/db/init/02-tables/: 01-user.sql  02-auth.sql
server/db/local-setup/: 00-setup.sql  01-setup-schemas.sql
skills/: instructions.md  spec-derivation-client.md  spec-derivation-server.md  stack-overview.md  todo.md
skills/stack/: daisyui.md  dinerojs.md  lucide.md
src/cli/: cli.just
src/cli/scripts/: _shared.just  check.just  ci.just  deploy.just  dev.just  test.just
src/client/: client.just  deno.json  flake.nix  todo.md
src/client/apps/vision/: deno.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
src/client/scripts/: _shared.just  check.just  ci.just  deploy.just  dev.just  test.just
src/client/sdk/core/: deno.json  package.json
src/client/sdk/state/: deno.json  package.json
src/client/sdk/ui/: deno.json  package.json  svelte.config.ts  vite.config.ts
src/server/: .env.example  README.md  flake.nix  just.md  justfile  next-steps.md  nushell.md  pkgs.nix  server.just  todo.md
src/server/db/: db-blueprint.md  db.Dockerfile  db.just  docker-compose.yml  flake.nix  todo.md
src/server/db/scripts/: check.just  deploy.just  dev.just  entrypoint.nu  entrypoint.sh  init-db.nu  init-db.sh  test.just
src/server/db/tests/: README.md  event-comment-creates-activity.hurl  fn-popular-items.hurl  graph-forward-reverse.hurl  reference-cascade-delete.hurl  unique-slug.hurl  (+2 more)
src/server/engine/: Cargo.toml  engine.just  flake.nix
src/server/engine/application/src/use_cases/: auth.rs  items.rs
src/server/engine/core/domain/: Cargo.toml
src/server/engine/core/domain/src/entities/: comment.rs  item.rs  mod.rs  user.rs
src/server/engine/core/domain/src/ports/: item.rs
src/server/engine/core/store/: Cargo.toml
src/server/engine/core/store/src/: tests.rs
src/server/engine/core/store/src/repos/: auth.rs  item.rs
src/server/engine/scripts/: _shared.just  check.just  deploy.just  dev.just  test.just
src/server/engine/services/api/src/adapters/http/: app_state.rs
src/server/engine/services/api/src/adapters/http/routes/: items.rs
src/server/engine/services/api/src/application/use_cases/: items.rs  mod.rs
src/server/engine/services/api/src/infra/: app.rs  setup.rs
src/server/engine/services/gateway/: Cargo.toml
src/server/engine/services/gateway/src/adapters/crypto/: argon2.rs
src/server/engine/services/gateway/src/adapters/graphql/: mod.rs  mutation.rs  query.rs
src/server/engine/services/gateway/src/adapters/graphql/guards/: mod.rs
src/server/engine/services/gateway/src/adapters/graphql/loaders/: mod.rs
src/server/engine/services/gateway/src/adapters/graphql/types/: auth.rs  comment.rs  item.rs  mod.rs
src/server/engine/services/gateway/src/adapters/grpc/: mod.rs  notifier.rs
src/server/engine/services/gateway/src/adapters/http/: app_error_impl.rs  app_state.rs
src/server/engine/services/gateway/src/adapters/http/routes/: graphql.rs
src/server/engine/services/gateway/src/infra/: config.rs
src/server/engine/services/wasm/src/: lib.rs
src/server/engine/src/application/: Cargo.toml
src/server/engine/src/application/src/: lib.rs
src/server/engine/src/application/src/use_cases/: auth.rs  items.rs
src/server/engine/src/core/domain/: Cargo.toml
src/server/engine/src/core/domain/src/entities/: item.rs  mod.rs  user.rs
src/server/engine/src/core/domain/src/ports/: mod.rs
src/server/engine/src/core/store/src/repos/: auth.rs  mod.rs
src/server/engine/src/services/gateway/: build.rs
src/server/engine/src/services/gateway/src/: lib.rs  main.rs
src/server/engine/src/services/gateway/src/adapters/: mod.rs
src/server/engine/src/services/gateway/src/adapters/graphql/: mutation.rs  query.rs  subscription.rs
src/server/engine/src/services/gateway/src/adapters/graphql/guards/: mod.rs
src/server/engine/src/services/gateway/src/adapters/graphql/types/: item.rs
src/server/engine/src/services/gateway/src/adapters/grpc/: documents.rs
src/server/engine/src/services/gateway/src/infra/: app.rs  setup.rs
src/server/engine/src/services/wasm/src/: lib.rs
src/server/proto/: buf.gen.yaml  flake.nix
src/server/rpc/: README.md  flake.nix  go.mod  rpc.Dockerfile  rpc.just  test-email-function.sh
src/server/scripts/: _shared.just  check.just  ci.just  deploy.just  dev.just  run-stack.sh  test.just
src/server/tests/: TODOS.md  buf.gen.yaml  deno.json  flake.nix  globalSetup.ts  package.json  preflight.ts  run-all.sh  tests.just  vite.config.ts
(+163 files in other folders)
