[package]
name = "generic-app"
version = "0.0.4"
description = "A comprehensive full-stack application template with Tauri integration, featuring type-safe data flow from database to UI"
authors = ["Fernando Bryan Reza Campos <fer.rezac@outlook.com>", "Yrrrrrf"]
edition = "2024"
repository = "https://github.com/Yrrrrrf/gwa"
license = "MIT"
readme = "README.md"
keywords = ["tauri", "svelte", "postgresql", "fastapi", "type-safe"]
categories = ["gui", "web-programming", "development-tools"]


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "generic_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = [] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# COMPILE OPTIMIZATION ------------------------------------------------------------------------
[profile.dev]
opt-level = 0  # no optimizations (fastest compile time, slowest runtime)

[profile.dev.package."*"]
opt-level = 3  # Optimize the dependencies at the highest level
# Slower first build, but faster subsequent builds

[profile.release]
opt-level = 3  # full optimizations (slowest compile time, fastest runtime)
lto = true  # link-time optimizations (slower compile time, faster runtime)
