[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../../core/domain" }
store = { path = "../../core/store" }
application = { path = "../../application" }

# HTTP
axum = { workspace = true, features = ["macros"] }
axum-core = { workspace = true }
async-graphql = { version = "8.0.0-rc.4", features = [
    "chrono",
    "uuid",
    "dataloader",
] }
async-graphql-axum = "8.0.0-rc.4"
futures-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axion = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# SurrealDB
surrealdb = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
secrecy = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
