[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../core/domain" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
secrecy = { workspace = true }
